k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      kind: Gateway
      sectionName: websecure
  hostnames:
    - "legislative.whyredfire.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: express-server
          port: 5000
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: next-server
          port: 3000
